[tool.poetry]
name = "python-sse-server"
version = "0.1.0"
description = ""
authors = ["Emmanuel Pastor <emmanuel.pastor@momox.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
sse-starlette = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
